# translatorrrr

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: llm.py  prompt.py  translator.py
translatorrr/: __init__.py  translator.py  utils.py
